--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>Booki Agence de voyage</title>
-   <link rel="stylesheet" type="text/css" href="/style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
    <header class="Header">
