--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hosting Prefer -->
    <section class="Hosting" id="Hosting">
       <aside class="hostingPrefer">
-         <h1 class="hostingTitle"> Nos chouchous : </h1>
+         <h1 class="hostingTitle"> Nos coeur de coeur : </h1>
 
             <article class="hostingBlock">
                <img class="hostingImg" src="./Images/hotel-lepetitlorrain.jpg" alt="chambre avec un lit pour deux cocooning">
@@ -56,7 +56,7 @@
 <!-- Main Hosting  -->
 <div class="mainHosting">
    <section class="mainHostingBackground"> 
-      <h1 class="hostingTitle"> Nos Hébergements : </h1>
+      <h1 class="hostingTitle"> Nos Hébergements :</h1>
          <article class="mainhostingBlock">
             <img class="mainhostingImg" src="./Images/hotel-lepetitlorrain.jpg" alt="chambre avec un lit pour deux cocooning">
             <h1 class="mainhostingSubtile"> L'Hôtel le petit lorrain</h1>
