modifications img nos chouchou

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hosting Prefer -->
    <section class="Hosting" id="Hosting">
       <aside class="hostingPrefer">
-         <h1 class="hostingTitle"> Nos coeur de coeur : </h1>
+         <h1 class="hostingTitle"> Nos coeur de coeur du moment : </h1>
 
             <article class="hostingBlock">
                <img class="hostingImg" src="./Images/hotel-lepetitlorrain.jpg" alt="chambre avec un lit pour deux cocooning">
