--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    <header class="Header">
       <img class="imgHeader" src="./Images/Logo_Booki.png">
-      <nav class="navHeader">
+      <nav>
          <ul>
             <li><a href="#">Accueil</a></li>
             <li><a href="#Hosting">Nos hébergements</a></li>
