--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     			<p>En plein centre-ville ou en pleine nature</p>
 		</div>	
 
-		<form class="searchForm" action="" method="GET">
+		<form class="searchForm" action="test" method="GET">
 			<div class="searchFormIcon">
 				<i class="fa-solid fa-location-dot"></i>
 			</div>
@@ -37,14 +37,14 @@
 
     </section>
     <div class="filter">
-    	<h3> filtre</h3>
-		<p class="button-filter"><i class="fa-solid fa-money-bill-wave"></i> Économique</p>
-		<p class="button-filter"><i class="fa-solid fa-person"></i> Familial</p> 
-		<p class="button-filter"><i class="fa-solid fa-heart"></i> Romantique</p>
-		<p class="button-filter"><i class="fa-solid fa-dog"></i> Animaux autorisés</p> 
+    	<h3 class="filterSubtile"> filtre</h3>
+		<div class="button-filter"><i class="fa-solid fa-money-bill-wave"></i> Économique</div>
+		<div class="button-filter"><i class="fa-solid fa-person"></i> Familial </div>
+		<div class="button-filter"><i class="fa-solid fa-heart"></i> Romantique</div>
+		<div class="button-filter"><i class="fa-solid fa-dog"></i> Animaux autorisés</div> 
     </div>    
 
-		<p class="paragraph"><div class="logo-i"><i class="fa-solid fa-info"></i></div> Plus de 500 logements sont disponibles dans cette ville</p>
+		<p class="paragraph"><i class="fa-solid logo-i fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
     <main>
         <section class="hosting" id="hosting">
 			<div class="hostingmain">
@@ -60,7 +60,7 @@
 								<i class="fa-sharp fa-solid fa-star"></i>
 								<i class="fa-sharp fa-solid fa-star"></i>
 								<i class="fa-sharp fa-solid fa-star"></i>
-								<i class="fa-sharp fa-solid fa-star"></i>
+								<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>		
 					</div>
 				</div></a>
@@ -75,7 +75,7 @@
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 			  			</div>
 					</div>
 				</div></a>
@@ -90,7 +90,7 @@
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 			  			</div>
 					</div>
 				</div></a>
@@ -105,7 +105,7 @@
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
 				</div></a>
@@ -120,7 +120,7 @@
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
 				</div></a>
@@ -135,7 +135,7 @@
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
 				</div></a>
@@ -146,50 +146,56 @@
 			<aside class="popularHosting">
 				<h2 class="titlePopular">les plus populaires <i class="fa-solid fa-chart-line"></i></h2> 
 
-				<div class="cardPopular"><a href ="#">
-					<img class ="img-cardPopular" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+				<a href="" class="cardPopular">
+					<div class = "blockimg">
+					<img class ="img-cardPopular" src="/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre Lumineuse avec double lit" style="width:100%">
+					</div>
 					<div class="containerPopular">
-					  <h4 class="hostingSubtile">Hôtel Chez Amira</h4>
-					  <p class="hostingParagraph">Nuit à partir de 96€</p>
+					  <h4 class="hostingSubtile">Hôtel le soleil du matin</h4>
+					  <p class="hostingParagraph">Nuit à partir de 128€</p>
 						<div class = "rating">
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
-				</div></a>
+				</a>
 
-				<div class="cardPopular" ><a href ="#">
-					<img class ="img-cardPopular" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+				<a href="" class="cardPopular">
+					<div class = "blockimg">
+						<img class ="img-cardPopular" src="/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre avec double lit style rustique" style="width:100%">
+					</div>	
 					<div class="containerPopular">
-					  <h4 class="hostingSubtile">Hôtel Chez Amira</h4>
-					  <p class="hostingParagraph">Nuit à partir de 96€</p>
+					  <h4 class="hostingSubtile">Chambres d'hôtes Au coeur de l'eau</h4>
+					  <p class="hostingParagraph">Nuit à partir de 71€</p>
 						<div class = "rating">
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
-				</div></a>
+				</a>
 
-				<div class="cardPopular"><a href ="#">
-					<img class ="img-cardPopular" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+				<a href="" class="cardPopular">
+					<div class = "blockimg">
+						<img class ="img-cardPopular" src="/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit blanc avec décoration bois" style="width:100%">
+					</div>
 					<div class="containerPopular">
-					  <h4 class="hostingSubtile">Hôtel Chez Amira</h4>
-					  <p class="hostingParagraph">Nuit à partir de 96€</p>
+					  <h4 class="hostingSubtile">Hôtel Bleu et Blanc</h4>
+					  <p class="hostingParagraph">Nuit à partir de 68€</p>
 						<div class = "rating">
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
-							<i class="fa-sharp fa-solid fa-star"></i>
+							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
-				</div></a>
+				</a>
 
 
 			</aside>
@@ -223,22 +229,22 @@
 <footer class="footer">
     <div class="footerColumnwrapper">
        <div class="columnLeft">
-          <h3>A propos</h3>
-          <h4>Fonctionnement du site</h4>
-          <h4>Condition Générales</h4>
-          <h4>Données et confidentialités</h4>
+          <h4 class="footerTitle">A propos</h3>
+          <h3 class="footerSubtile">Fonctionnement du site</h3>
+          <h3 class="footerSubtile">Condition Générales</h3>
+          <h3 class="footerSubtile">Données et confidentialités</h3>
        </div>
 
        <div class="columnCenter">
-          <h3>Nos hébergements</h3>
-          <h4>chartes qualité</h4>
-          <h4>Proposer votre hôtel</h4>
+          <h4 class="footerTitle">Nos hébergements</h4>
+          <h3 class="footerSubtile">chartes qualité</h3>
+          <h3 class="footerSubtile">Proposer votre hôtel</h3>
        </div>
 
        <div class="columnRight">
-          <h3>Asistance</h3>
-          <h4>centre d'aide</h4>
-          <h4>Nous contacter</h4>
+          <h4 class="footerTitle">Asistance</h4>
+          <h3 class="footerSubtile">centre d'aide</h3>
+          <h3 class="footerSubtile">Nous contacter</h3>
        </div>
 
     </div>
