--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Booki</title>
 </head>
-<body>
+<body class="container">
     <header class="header">
         <img class = "logo" src="/Images/logo/Booki.png" alt="logo booki">
             <nav>
@@ -38,10 +38,10 @@
     </section>
     <div class="filter">
     	<h3 class="filterSubtile"> filtre</h3>
-		<div class="button-filter"><i class="fa-solid fa-money-bill-wave"></i> Économique</div>
-		<div class="button-filter"><i class="fa-solid fa-person"></i> Familial </div>
-		<div class="button-filter"><i class="fa-solid fa-heart"></i> Romantique</div>
-		<div class="button-filter"><i class="fa-solid fa-dog"></i> Animaux autorisés</div> 
+		<a href ="#"><div class="button-filter"><i class="fa-solid fa-money-bill-wave"></i> Économique</div></a>
+		<a href ="#"><div class="button-filter"><i class="fa-solid fa-person"></i> Familial </div></a>
+		<a href ="#"><div class="button-filter"><i class="fa-solid fa-heart"></i> Romantique</div></a>
+		<a href ="#"><div class="button-filter"><i class="fa-solid fa-dog"></i> Animaux autorisés</div></a> 
     </div>    
 
 		<p class="paragraph"><i class="fa-solid logo-i fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
@@ -113,7 +113,7 @@
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
-					  <h4 class="hostingSubtile">Auberge Le Panier></h4>
+					  <h4 class="hostingSubtile">Auberge Le Panier</h4>
 					  <p class="hostingParagraph">Nuit à partir de 23€</p>
 						<div class = "rating">
 							<i class="fa-sharp fa-solid fa-star"></i>
@@ -151,9 +151,9 @@
 					<img class ="img-cardPopular" src="/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre Lumineuse avec double lit" style="width:100%">
 					</div>
 					<div class="containerPopular">
-					  <h4 class="hostingSubtile">Hôtel le soleil du matin</h4>
-					  <p class="hostingParagraph">Nuit à partir de 128€</p>
-						<div class = "rating">
+					  <h4 class="hostingSubtilep">Hôtel le soleil du matin</h4>
+					  <p class="hostingParagraphp">Nuit à partir de 128€</p>
+						<div class = "rating-popular">
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
@@ -168,9 +168,9 @@
 						<img class ="img-cardPopular" src="/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre avec double lit style rustique" style="width:100%">
 					</div>	
 					<div class="containerPopular">
-					  <h4 class="hostingSubtile">Chambres d'hôtes Au coeur de l'eau</h4>
-					  <p class="hostingParagraph">Nuit à partir de 71€</p>
-						<div class = "rating">
+					  <h4 class="hostingSubtilep">Chambres d'hôtes Au coeur de l'eau</h4>
+					  <p class="hostingParagraphp">Nuit à partir de 71€</p>
+						<div class = "rating-popular-2">
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
@@ -185,9 +185,9 @@
 						<img class ="img-cardPopular" src="/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit blanc avec décoration bois" style="width:100%">
 					</div>
 					<div class="containerPopular">
-					  <h4 class="hostingSubtile">Hôtel Bleu et Blanc</h4>
-					  <p class="hostingParagraph">Nuit à partir de 68€</p>
-						<div class = "rating">
+					  <h4 class="hostingSubtilep">Hôtel Bleu et Blanc</h4>
+					  <p class="hostingParagraphp">Nuit à partir de 68€</p>
+						<div class = "rating-popular">
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
 							<i class="fa-sharp fa-solid fa-star"></i>
@@ -204,22 +204,22 @@
 		<section class="activity" id="activity">
 			<h2 class="activityTitle">Activités à Marseille</h2>
 			<div class="activity-groups">
-				<article class="blockActivity">
+				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image du vieux-port">
 				   <p class = "activitySubtile">Vieux-port</p>
-				</article>
-				<article class="blockActivity">
+				</article></a>
+				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image du Fort de Pomègues">
 				   <p class = "activitySubtile">Fort de Pomègues</p>
-				</article>  
-				<article class="blockActivity">
+				</article></a>  
+				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image du Parc national des Calanques">
 				   <p class = "activitySubtile">Parc national des Calanques</p>
-				</article>
-				<article class="blockActivity">
+				</article></a>
+				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image de Notre-Dame-de-la-Garde">
 				   <p class = "activitySubtile">Notre-Dame-de-la-Garde</p>
-				</article>
+				</article></a>
 			 </div>    
 		</section>
 		
@@ -230,21 +230,21 @@
     <div class="footerColumnwrapper">
        <div class="columnLeft">
           <h4 class="footerTitle">A propos</h3>
-          <h3 class="footerSubtile">Fonctionnement du site</h3>
-          <h3 class="footerSubtile">Condition Générales</h3>
-          <h3 class="footerSubtile">Données et confidentialités</h3>
+          <a href=""><h3 class="footerSubtile">Fonctionnement du site</h3></a>
+          <a href=""><h3 class="footerSubtile">Condition Générales</h3></a>
+          <a href=""><h3 class="footerSubtile">Données et confidentialités</h3></a>
        </div>
 
        <div class="columnCenter">
           <h4 class="footerTitle">Nos hébergements</h4>
-          <h3 class="footerSubtile">chartes qualité</h3>
-          <h3 class="footerSubtile">Proposer votre hôtel</h3>
+          <a href=""><h3 class="footerSubtile">chartes qualité</h3></a>
+          <a href=""><h3 class="footerSubtile">Proposer votre hôtel</h3></a>
        </div>
 
        <div class="columnRight">
           <h4 class="footerTitle">Asistance</h4>
-          <h3 class="footerSubtile">centre d'aide</h3>
-          <h3 class="footerSubtile">Nous contacter</h3>
+         <a href=""><h3 class="footerSubtile">centre d'aide</h3></a>
+          <a href=""><h3 class="footerSubtile">Nous contacter</h3></a>
        </div>
 
     </div>
