Mise à jour du desktop + tablette version

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre avec un grand lit et une grande armoire" style="width:100%">
 					<div class="container">
-					  <h4 class="hostingSubtile">hôtel les mouettes</h4>
+					  <h4 class="hostingSubtile">Hôtel les mouettes</h4>
 					  <p class="hostingParagraph">Nuit à partir de 76€</p>
 						<div class = "rating">
 							<i class="fa-sharp fa-solid fa-star"></i>
@@ -96,7 +96,7 @@
 				</div></a>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="/Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">hôtel de la mer</h4>
 					  <p class="hostingParagraph">Nuit à partir de 46€</p>
@@ -111,7 +111,7 @@
 				</div></a>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="/Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Auberge Le Panier</h4>
 					  <p class="hostingParagraph">Nuit à partir de 23€</p>
@@ -126,7 +126,7 @@
 				</div></a>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="/Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Hôtel Chez Amira</h4>
 					  <p class="hostingParagraph">Nuit à partir de 96€</p>
@@ -182,7 +182,7 @@
 
 				<a href="" class="cardPopular">
 					<div class = "blockimg">
-						<img class ="img-cardPopular" src="/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit blanc avec décoration bois" style="width:100%">
+						<img class ="img-cardPopular" src="/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre avec double lit blanc avec décoration bois" style="width:100%">
 					</div>
 					<div class="containerPopular">
 					  <h4 class="hostingSubtilep">Hôtel Bleu et Blanc</h4>
