--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<input class="searchFormSearchinput" type="search" placeholder="Marseille, France" size="1">
 			<button class="searchSubmitinput">
-			  <span class="searchSubmitinputText">Rechercher</span>
+				<i class="fa-solid fa-magnifying-glass"></i><span class="searchSubmitinputText"> Rechercher</span>
 			</button>
 		  </form>
 
