--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="https://kit.fontawesome.com/99e3a59f36.js" crossorigin="anonymous">
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -63,7 +65,7 @@
 								<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>		
 					</div>
-				</div></a>
+				</a></div>
 
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre avec 2 lit simple" style="width:100%">
@@ -78,7 +80,7 @@
 							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 			  			</div>
 					</div>
-				</div></a>
+				</a></div>
 
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre avec un grand lit et une grande armoire" style="width:100%">
@@ -93,7 +95,7 @@
 							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 			  			</div>
 					</div>
-				</div></a>
+				</a></div>
 
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
@@ -108,7 +110,7 @@
 							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
-				</div></a>
+				</a></div>
 
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
@@ -123,7 +125,7 @@
 							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
-				</div></a>
+				</a></div>
 
 				<div class="card"><a href ="#">
 					<img class ="img-card" src="/Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
@@ -138,14 +140,14 @@
 							<i class="fa-sharp gris-stars fa-solid fa-star"></i>
 						</div>
 					</div>
-				</div></a>
+				</a></div>
 				
 				<p class="paragraphEnd"> Aficher plus</p>
 			</div>
         
 			<aside class="popularHosting">
 				<h2 class="titlePopular">les plus populaires <i class="fa-solid fa-chart-line"></i></h2> 
-
+				<div class="popular">
 				<a href="" class="cardPopular">
 					<div class = "blockimg">
 					<img class ="img-cardPopular" src="/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre Lumineuse avec double lit" style="width:100%">
@@ -197,7 +199,7 @@
 					</div>
 				</a>
 
-
+				</div>
 			</aside>
 		</section>
 
@@ -207,11 +209,11 @@
 				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image du vieux-port">
 				   <p class = "activitySubtile">Vieux-port</p>
-				</article></a>
+				</a></article>
 				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image du Fort de Pomègues">
 				   <p class = "activitySubtile">Fort de Pomègues</p>
-				</article></a>  
+				</a></article>  
 				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image du Parc national des Calanques">
 				   <p class = "activitySubtile">Parc national des Calanques</p>
@@ -219,17 +221,17 @@
 				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="/Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image de Notre-Dame-de-la-Garde">
 				   <p class = "activitySubtile">Notre-Dame-de-la-Garde</p>
-				</article></a>
+				</a></article>
 			 </div>    
 		</section>
 		
 
     </main>
 </body> 
-<footer class="footer">
+<footer>
     <div class="footerColumnwrapper">
        <div class="columnLeft">
-          <h4 class="footerTitle">A propos</h3>
+          <h4 class="footerTitle">A propos</h4>
           <a href=""><h3 class="footerSubtile">Fonctionnement du site</h3></a>
           <a href=""><h3 class="footerSubtile">Condition Générales</h3></a>
           <a href=""><h3 class="footerSubtile">Données et confidentialités</h3></a>
