Modification footer + titre

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </nav>
     </header>
 		<div class="text-header">
-    		<h1>Trouvez votre hébergement pour des vacances de rêve </h1>
-    			<p>En plein centre-ville ou en pleine nature</p>
+    		<h1 class="title-header">Trouvez votre hébergement pour des vacances de rêve </h1>
+    			<p class="subtitle-header">En plein centre-ville ou en pleine nature</p>
 		</div>	
 
 		<form class="searchForm" action="test" method="GET">
