--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             	<h2>hébergements à marseille</h2>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="./Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Auberge La Canebière</h4>
 					  <p class="hostingParagraph">Nuit à partir de 25€</p>
@@ -68,7 +68,7 @@
 				</a></div>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre avec 2 lit simple" style="width:100%">
+					<img class ="img-card" src="./Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre avec 2 lit simple" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Hôtel du port</h4>
 					  <p class="hostingParagraph">Nuit à partir de 52€</p>
@@ -83,7 +83,7 @@
 				</a></div>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre avec un grand lit et une grande armoire" style="width:100%">
+					<img class ="img-card" src="./Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre avec un grand lit et une grande armoire" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Hôtel les mouettes</h4>
 					  <p class="hostingParagraph">Nuit à partir de 76€</p>
@@ -98,7 +98,7 @@
 				</a></div>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="./Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">hôtel de la mer</h4>
 					  <p class="hostingParagraph">Nuit à partir de 46€</p>
@@ -113,7 +113,7 @@
 				</a></div>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="./Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Auberge Le Panier</h4>
 					  <p class="hostingParagraph">Nuit à partir de 23€</p>
@@ -128,7 +128,7 @@
 				</a></div>
 
 				<div class="card"><a href ="#">
-					<img class ="img-card" src="/Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
+					<img class ="img-card" src="./Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre avec double lit" style="width:100%">
 					<div class="container">
 					  <h4 class="hostingSubtile">Hôtel Chez Amira</h4>
 					  <p class="hostingParagraph">Nuit à partir de 96€</p>
@@ -150,7 +150,7 @@
 				<div class="popular">
 				<a href="" class="cardPopular">
 					<div class = "blockimg">
-					<img class ="img-cardPopular" src="/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre Lumineuse avec double lit" style="width:100%">
+					<img class ="img-cardPopular" src="./Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre Lumineuse avec double lit" style="width:100%">
 					</div>
 					<div class="containerPopular">
 					  <h4 class="hostingSubtilep">Hôtel le soleil du matin</h4>
@@ -167,7 +167,7 @@
 
 				<a href="" class="cardPopular">
 					<div class = "blockimg">
-						<img class ="img-cardPopular" src="/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre avec double lit style rustique" style="width:100%">
+						<img class ="img-cardPopular" src="./Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre avec double lit style rustique" style="width:100%">
 					</div>	
 					<div class="containerPopular">
 					  <h4 class="hostingSubtilep">Chambres d'hôtes Au coeur de l'eau</h4>
@@ -184,7 +184,7 @@
 
 				<a href="" class="cardPopular">
 					<div class = "blockimg">
-						<img class ="img-cardPopular" src="/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre avec double lit blanc avec décoration bois" style="width:100%">
+						<img class ="img-cardPopular" src="./Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre avec double lit blanc avec décoration bois" style="width:100%">
 					</div>
 					<div class="containerPopular">
 					  <h4 class="hostingSubtilep">Hôtel Bleu et Blanc</h4>
@@ -207,19 +207,19 @@
 			<h2 class="activityTitle">Activités à Marseille</h2>
 			<div class="activity-groups">
 				<article class="blockActivity"><a href="">
-				   <img class="imgActivity" src="/Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image du vieux-port">
+				   <img class="imgActivity" src="./Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image du vieux-port">
 				   <p class = "activitySubtile">Vieux-port</p>
 				</a></article>
 				<article class="blockActivity"><a href="">
-				   <img class="imgActivity" src="/Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image du Fort de Pomègues">
+				   <img class="imgActivity" src="./Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image du Fort de Pomègues">
 				   <p class = "activitySubtile">Fort de Pomègues</p>
 				</a></article>  
 				<article class="blockActivity"><a href="">
-				   <img class="imgActivity" src="/Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image du Parc national des Calanques">
+				   <img class="imgActivity" src="./Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image du Parc national des Calanques">
 				   <p class = "activitySubtile">Parc national des Calanques</p>
 				</article></a>
 				<article class="blockActivity"><a href="">
-				   <img class="imgActivity" src="/Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image de Notre-Dame-de-la-Garde">
+				   <img class="imgActivity" src="./Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image de Notre-Dame-de-la-Garde">
 				   <p class = "activitySubtile">Notre-Dame-de-la-Garde</p>
 				</a></article>
 			 </div>    
