--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<a href ="#"><div class="button-filter"><i class="fa-solid fa-money-bill-wave"></i> Économique</div></a>
 		<a href ="#"><div class="button-filter"><i class="fa-solid fa-person"></i> Familial </div></a>
 		<a href ="#"><div class="button-filter"><i class="fa-solid fa-heart"></i> Romantique</div></a>
-		<a href ="#"><div class="button-filter"><i class="fa-solid fa-dog"></i> Animaux autorisés</div></a> 
+		<a href ="#"><div class="button-filter2"><i class="fa-solid fa-dog"></i> <p class="filtreAnimaux">Animaux autorisés</p></div></a> 
     </div>    
 
 		<p class="paragraph"><i class="fa-solid logo-i fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
