--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="./Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image du Parc national des Calanques">
 				   <p class = "activitySubtile">Parc national des Calanques</p>
-				</article></a>
+				</a></article>
 				<article class="blockActivity"><a href="">
 				   <img class="imgActivity" src="./Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image de Notre-Dame-de-la-Garde">
 				   <p class = "activitySubtile">Notre-Dame-de-la-Garde</p>
@@ -227,7 +227,7 @@
 		
 
     </main>
-</body> 
+
 <footer>
     <div class="footerColumnwrapper">
        <div class="columnLeft">
@@ -251,4 +251,5 @@
 
     </div>
  </footer>
+</body> 
 </html>
