--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src="https://kit.fontawesome.com/99e3a59f36.js" crossorigin="anonymous">
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Booki</title>
 </head>
 <body class="container">
     <header class="header">
-        <img class = "logo" src="/Images/logo/Booki.png" alt="logo booki">
+        <img class = "logo" src="Images/logo/Booki.png" alt="logo booki">
             <nav>
                 <ul>
                     <li><a href="#hosting">hébergements</a></li>
